[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/editor/EditorUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/camera/GameCam.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/editor/MapEditor.gd" type="Script" id=4]

[node name="MapEditor" type="Node2D"]
script = ExtResource( 4 )

[node name="EditorUI" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
[connection signal="mode_changed" from="EditorUI" to="." method="_on_EditorUI_mode_changed"]
[connection signal="new_map_pressed" from="EditorUI" to="." method="_on_EditorUI_new_map_pressed"]
[connection signal="player_selected" from="EditorUI" to="." method="_on_EditorUI_player_selected"]
[connection signal="save_pressed" from="EditorUI" to="." method="_on_EditorUI_save_pressed"]
[connection signal="terrain_selected" from="EditorUI" to="." method="_on_EditorUI_terrain_selected"]
